# edc

./: Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
src/: cli.rs  command.rs  main.rs  output_path.rs
