[package]
name = "emc"
description = "EdJoPaTos Media Converter"
version = "0.1.0"
authors = ["EdJoPaTo <emc-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "2"
features = ["wrap_help"]
