[package]
name = "edc"
description = "A tool helping with converting or compressing media"
version = "0.2.0"
license = "MIT"
authors = ["EdJoPaTo <edc-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "2"
features = ["wrap_help"]
